--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ a:hover{color:#99ccff;}
 </tr>
 </table><br><br>
 <div id="resultField" style="text-align:center;">
-    <p><font size="2" face="돋움"><span style="">DAY6 공식 유튜브 채널에 업로드된 곡만 항목화하였습니다.</font></p>
+    <p><font size="2" face="돋움"><span style=""></font></p>
     <p><font size="2" face="돋움">26.01.01 ver.</font></p>
 
 </div>
@@ -360,6 +360,7 @@ showImage();
 
 </body>
 </html>
+
 
 
 
