--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@ a:hover{color:#99ccff;}
 </tr>
 </table><br><br>
 <div id="resultField" style="text-align:center;">
-    <p><font size="2" face="돋움"><span style=""></font></p>
-    <p><font size="2" face="돋움">26.01.01 ver.</font></p>
+    <p><font size="2" face="돋움"><span style="">26.01.01 ver.</font></p>
+    <p><font size="2" face="돋움"></font></p>
 
 </div>
 <script type="text/javascript">
@@ -360,6 +360,7 @@ showImage();
 
 </body>
 </html>
+
 
 
 
